personal txpool api
